--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>fcc-TechDocPage</title>
 </head>
 <body>
+    <nav id="nav">
+        <header>JS Documentation</header>
+        <a href="#Introduction" id="nav-link">Introduction</a>
+        <a href="#What_you_should_already_know" id="nav-link">What you should already know</a>
+        <a href="#JavaScript_and_Java" id="nav-link">JavaScript and Java</a>
+        <a href="#Hello_world" id="nav-link">Hello world</a>
+        <a href="#Variables" id="nav-link">Variables</a>
+        <a href="#Declaring_variables" id="nav-link">Declaring variables</a>
+        <a href="#Variable_scope" id="nav-link">Variable scope</a>
+        <a href="#Global_variables" id="nav-link">Global variables</a>
+        <a href="#Constants" id="nav-link">Constants</a>
+        <a href="#Data_types" id="nav-link">Data types</a>
+        <a href="#if...else_statement" id="nav-link">if...else statement</a>
+        <a href="#while_statement" id="nav-link">while statement</a>
+        <a href="#Function_declarations" id="nav-link">Function declarations</a>
+        <a href="#Reference" id="nav-link">Reference</a>
+    </nav>
     <main id="main-doc">
         <section class="main-section" id="Introduction">
             <header id="Introduction">Introduction</header>
@@ -71,12 +88,25 @@
 
                 JavaScript before ECMAScript 2015 does not have block statement scope; rather, a variable declared within a block is local to the function (or global scope) that the block resides within. For example the following code will log 5, because the scope of x is the function (or global context) within which x is declared, not the block, which in this case is an if statement.</p>
                 <code>if (true) { var x = 5; } console.log(x); // 5</code>
+                <p>This behavior changes, when using the let declaration introduced in ECMAScript 2015.</p>
+                <code>if (true) { let y = 5; } console.log(y); // ReferenceError: y is not defined</code>
         <section class="main-section" id="Global_variables">
-            <header id="Global_variables"></header>
-            <p></p>
+            <header id="Global_variables">Global variables</header>
+            <p>Global variables are in fact properties of the global object. In web pages the global object is window, so you can set and access global variables using the window.variable syntax.
+
+                Consequently, you can access global variables declared in one window or frame from another window or frame by specifying the window or frame name. For example, if a variable called phoneNumber is declared in a document, you can refer to this variable from an iframe as parent.phoneNumber.</p>
         <section class="main-section" id="Constants">
-            <header id="Constants"></header>
-            <p></p>
+            <header id="Constants">Constants</header>
+            <p>You can create a read-only, named constant with the const keyword. The syntax of a constant identifier is the same as for a variable identifier: it must start with a letter, underscore or dollar sign and can contain alphabetic, numeric, or underscore characters.</p>
+            <code>const PI = 3.14;</code>
+            <p>A constant cannot change value through assignment or be re-declared while the script is running. It has to be initialized to a value.
+
+                The scope rules for constants are the same as those for let block scope variables. If the const keyword is omitted, the identifier is assumed to represent a variable.
+                
+                You cannot declare a constant with the same name as a function or variable in the same scope. For example:</p>
+                <code>// THIS WILL CAUSE AN ERROR function f() {}; const f = 5; // THIS WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g; //statements }</code>
+                <p>However, object attributes are not protected, so the following statement is executed without problems.</p>
+                <code>const MY_OBJECT = {"key": "value"}; MY_OBJECT.key = "otherValue";</code>
         
         <section class="main-section" id="Data_types">
             <header id="Data_types"></header>
