--- a/index.html
+++ b/index.html
@@ -109,11 +109,34 @@
                 <code>const MY_OBJECT = {"key": "value"}; MY_OBJECT.key = "otherValue";</code>
         
         <section class="main-section" id="Data_types">
-            <header></header>
-            <p></p>
+            <header>Data types</header>
+            <p>The latest ECMAScript standard defines seven data types:</p>
+            <ul>
+                <li>Six data types that are primitives:
+                    <ul>
+                    <li>Boolean. true and false.</li>
+                    <li>null. A special keyword denoting a null value. Because JavaScript is case-sensitive, null is not the same as Null, NULL, or any other variant.</li>
+                    <li>undefined. A top-level property whose value is undefined.</li>
+                    <li>Number. 42 or 3.14159</li>
+                    <li>String. "Howdy"</li>
+                    <li>Symbol (new in ECMAScript 2015). A data type whose instances are unique and immutable.</li>
+                </ul>
+                </li>
+                <li>and Object</li>
+            </ul>
         <section class="main-section" id="if...else_statement">
-            <header></header>
-            <p></p>
+            <header>if...else statement</header>
+            <p>Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows:</p>
+            <code>if (condition) { statement_1; } else { statement_2; }</code>
+            <p>condition can be any expression that evaluates to true or false. See Boolean for an explanation of what evaluates to true and false. If condition evaluates to true, statement_1 is executed; otherwise, statement_2 is executed. statement_1 and statement_2 can be any statement, including further nested if statements.
+                You may also compound the statements using else if to have multiple conditions tested in sequence, as follows:</p>
+                <code>if (condition_1) { statement_1; } else if (condition_2) { statement_2; } else if (condition_n) { statement_n; } else { statement_last; }</code>
+                <p>In the case of multiple conditions only the first logical condition which evaluates to true will be executed. To execute multiple statements, group them within a block statement ({ ... }) . In general, it's good practice to always use block statements, especially when nesting if statements:</p>
+                <code>if (condition) { statement_1_runs_if_condition_is_true; statement_2_runs_if_condition_is_true; } else { statement_3_runs_if_condition_is_false; statement_4_runs_if_condition_is_false; }</code>
+                <p>It is advisable to not use simple assignments in a conditional expression, because the assignment can be confused with equality when glancing over the code. For example, do not use the following code:</p>
+                <code>if (x = y) { /* statements here */ }</code>
+                <p>If you need to use an assignment in a conditional expression, a common practice is to put additional parentheses around the assignment. For example:</p>
+                <code>if ((x = y)) { /* statements here */ }</code>
         <section class="main-section" id="while_statement">
             <header>while statement</header>
             <p>A while statement executes its statements as long as a specified condition evaluates to true. A while statement looks as follows:</p>
@@ -126,6 +149,16 @@
                 Example:
                 The following while loop iterates as long as n is less than three:</p>
                 <code>var n = 0; var x = 0; while (n < 3) { n++; x += n; }</code>
+                With each iteration, the loop increments n and adds that value to x. Therefore, x and n take on the following values:
+                    <ul>
+                        <li>After the first pass: n = 1 and x = 1</li>
+                        <li>After the second pass: n = 2 and x = 3</li>
+                        <li>After the third pass: n = 3 and x = 6</li>
+                    </ul>
+
+
+                    <p>
+                    After completing the third pass, the condition n < 3 is no longer true, so the loop terminates.</p>
         <section class="main-section" id="Function_declarations">
             <header>Function declarations</header>
             <p>A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by:
