--- a/index.html
+++ b/index.html
@@ -4,25 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
     <title>fcc-TechDocPage</title>
 </head>
 <body>
-    <nav id="nav">
+    <nav id="navbar">
         <header>JS Documentation</header>
-        <a href="#Introduction" id="nav-link">Introduction</a>
-        <a href="#What_you_should_already_know" id="nav-link">What you should already know</a>
-        <a href="#JavaScript_and_Java" id="nav-link">JavaScript and Java</a>
-        <a href="#Hello_world" id="nav-link">Hello world</a>
-        <a href="#Variables" id="nav-link">Variables</a>
-        <a href="#Declaring_variables" id="nav-link">Declaring variables</a>
-        <a href="#Variable_scope" id="nav-link">Variable scope</a>
-        <a href="#Global_variables" id="nav-link">Global variables</a>
-        <a href="#Constants" id="nav-link">Constants</a>
-        <a href="#Data_types" id="nav-link">Data types</a>
-        <a href="#if...else_statement" id="nav-link">if...else statement</a>
-        <a href="#while_statement" id="nav-link">while statement</a>
-        <a href="#Function_declarations" id="nav-link">Function declarations</a>
-        <a href="#Reference" id="nav-link">Reference</a>
+        <a href="#Introduction" class="nav-link">Introduction</a>
+        <a href="#What_you_should_already_know" class="nav-link">What you should already know</a>
+        <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
+        <a href="#Hello_world" class="nav-link">Hello world</a>
+        <a href="#Variables" class="nav-link">Variables</a>
+        <a href="#Declaring_variables" class="nav-link">Declaring variables</a>
+        <a href="#Variable_scope" class="nav-link">Variable scope</a>
+        <a href="#Global_variables" class="nav-link">Global variables</a>
+        <a href="#Constants" class="nav-link">Constants</a>
+        <a href="#Data_types" class="nav-link">Data types</a>
+        <a href="#if...else_statement" class="nav-link">if...else statement</a>
+        <a href="#while_statement" class="nav-link">while statement</a>
+        <a href="#Function_declarations" class="nav-link">Function declarations</a>
+        <a href="#Reference" class="nav-link">Reference</a>
     </nav>
     <main id="main-doc">
         <section class="main-section" id="Introduction">
@@ -30,7 +34,7 @@
             <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.
 
                 JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements. Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects; for example:
-                <ul>
+                <ul><br>
                 <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form and respond to user events such as mouse clicks, form input, and page navigation.</li>
                 <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server.</li>
                 </ul></p>
